--- a/.env
+++ b/.env
@@ -1,15 +1,7 @@
 SECRET_KEY='django-insecure-mo6l7ga_yb$&hzdi%6iye)w%$f8&#fj_18yaesyknd0h^*9hdb'
 DEBUG=True
 DATABASE_URL=postgresql://homelife_a76w_user:JCXomkJPPb3fNUrYFeXLCWYo6iPXY6SP@dpg-crc8h6ogph6c738qcjig-a.oregon-postgres.render.com/homelife_a76w
-ALLOWED_HOSTS=127.0.0.1,
-
-
-
-
-
-
-
-
+ALLOWED_HOSTS=127.0.0.1, localhost
 EMAIL_HOST_USER=homelife.site.kg@gmail.com
 EMAIL_HOST_PASSWORD=cxjngcpjnhjxyweq
 CLOUD_NAME=homelife
